--- a/src/Common.Logging.NLog21/Common.Logging.NLog21.2010.csproj
+++ b/src/Common.Logging.NLog21/Common.Logging.NLog21.2010.csproj
@@ -118,15 +118,15 @@
       <Project>{cadfb630-279f-427c-96a9-d2f9aa718648}</Project>
       <Name>Common.Logging.Core.2010-net20</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Common.Logging\Common.Logging.2010.csproj">
+    <ProjectReference Include="..\Common.Logging\Common.Logging.2010-net40.csproj">
       <Project>{440D903A-D409-48FC-A6C4-3EE69CCD663B}</Project>
-      <Name>Common.Logging.2010</Name>
+      <Name>Common.Logging.2010-net40</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="c3faaf50-ca05-42a5-9616-b48c21643d03" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="c3faaf50-ca05-42a5-9616-b48c21643d03" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
