--- a/src/Common.Logging.DotNetCore/Common.Logging.DotNetCore.csproj
+++ b/src/Common.Logging.DotNetCore/Common.Logging.DotNetCore.csproj
@@ -2,13 +2,15 @@
 
   <PropertyGroup>
     <VersionPrefix>3.4.0.1</VersionPrefix>
+    <AssemblyVersion>3.4.0.1</AssemblyVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DefineConstants>$(DefineConstants);PORTABLE;DOTNETCORE</DefineConstants>
     <DebugType>portable</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Common.Logging</AssemblyName>
-    <PackageId>Common.Logging.DotNetCore</PackageId>
+    <PackageId>Common.Logging.NetStandard</PackageId>
     <Copyright>Copyright 2006-2011 the Common Infrastructure Libraries Team. (+LD)</Copyright>
+    <Description>Common.Logging (netstandard) (LD)</Description>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
