including non-portable code in dotnetcore

--- a/src/Common.Logging.DotNetCore/Common.Logging.DotNetCore.csproj
+++ b/src/Common.Logging.DotNetCore/Common.Logging.DotNetCore.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <VersionPrefix>3.4.1.1</VersionPrefix>
     <AssemblyVersion>3.4.1.1</AssemblyVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <DefineConstants>$(DefineConstants);PORTABLE;DOTNETCORE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;PORTABLE;DOTNETCORE;NETSTANDARD2_0;NETSTANDARD</DefineConstants>
     <DebugType>portable</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Common.Logging</AssemblyName>
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <Compile Remove="..\Common.Logging.Portable\Logging\Factory\ResharperAnnotation.cs" />
-    <Compile Include="..\Common.Logging.Portable\**\*.cs;..\CommonAssemblyInfo.cs" Exclude="..\Common.Logging.Portable\Logging\Factory\ResharperAnnotation.cs;bin\**;obj\**;**\*.xproj;packages\**" />
+    <Compile Include="..\Common.Logging\**\*.cs;..\Common.Logging.Portable\**\*.cs;..\CommonAssemblyInfo.cs" Exclude="..\Common.Logging.Portable\Logging\Factory\ResharperAnnotation.cs;bin\**;obj\**;**\*.xproj;packages\**" />
   </ItemGroup>
 
   <ItemGroup>
