--- a/src/Common.Logging.Core.DotNetCore/Common.Logging.Core.DotNetCore.csproj
+++ b/src/Common.Logging.Core.DotNetCore/Common.Logging.Core.DotNetCore.csproj
@@ -1,22 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Version>3.4.1.1</Version>
-    <AssemblyVersion>3.4.1.1</AssemblyVersion>
-    <FileVersion>3.4.1.1</FileVersion>
+    <VersionPrefix>3.4.1.2</VersionPrefix>
+    <AssemblyVersion>3.4.1.2</AssemblyVersion>
+    <FileVersion>3.4.1.2</FileVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
     <DefineConstants>$(DefineConstants);PORTABLE;DOTNETCORE</DefineConstants>
     <DebugType>portable</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Common.Logging.Core</AssemblyName>
     <PackageId>Common.Logging.Core.NetStandard</PackageId>
-    <Copyright>Copyright 2006-2011 the Common Infrastructure Libraries Team. (+NTERSOL)</Copyright>
+    <Copyright>Copyright 2006-20118 the Common Infrastructure Libraries Team. (+NTERSOL)</Copyright>
     <Description>Common.Logging.Core (netstandard) (NTERSOL)</Description>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <!--<GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>-->
-    <GenerateAssemblyVersionAttribute>true</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../../NTERSOL.snk</AssemblyOriginatorKeyFile>
