--- a/src/Common.Logging/Common.Logging.2010-net40.csproj
+++ b/src/Common.Logging/Common.Logging.2010-net40.csproj
@@ -41,7 +41,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\..\build\net40\Common.Logging\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NET_4_0</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;NET_4_0;NETFULL</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\build\net40\Common.Logging\Debug\Common.Logging.xml</DocumentationFile>
