--- a/src/Common.Logging.NLog453/Common.Logging.NLog45.csproj
+++ b/src/Common.Logging.NLog453/Common.Logging.NLog45.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Company>http://netcommon.sourceforge.net/</Company>
-    <Copyright>Copyright 2006-2018 the Common Infrastructure Libraries Team. (+NTERSOL)</Copyright>
-    <Product>Common.Logging.NLog45</Product>
+    <Copyright>(c) 2006-2018 the Common Infrastructure Libraries Team. (+NTERSOL)</Copyright>
+    <Product>Common.Logging.NLog45 (NTERSOL)</Product>
     <Description>Common.Logging.Core (netstandard) (NTERSOL)</Description>
     <Version>3.4.1.2</Version>
     <AssemblyVersion>3.4.1.2</AssemblyVersion>
