--- a/src/Common.Logging.NLog453/Common.Logging.NLog45.csproj
+++ b/src/Common.Logging.NLog453/Common.Logging.NLog45.csproj
@@ -6,8 +6,9 @@
     <Copyright>(c) 2006-2018 the Common Infrastructure Libraries Team. (+NTERSOL)</Copyright>
     <Product>Common.Logging.NLog45 (NTERSOL)</Product>
     <Description>Common.Logging.Core (netstandard) (NTERSOL)</Description>
-    <Version>3.4.1.2</Version>
-    <AssemblyVersion>3.4.1.2</AssemblyVersion>
+    <Version>3.4.1.3</Version>
+    <AssemblyVersion>3.4.1.3</AssemblyVersion>
+    <FileVersion>3.4.1.3</FileVersion>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>../../NTERSOL.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
