--- a/src/Common.Logging.DotNetCore/Common.Logging.DotNetCore.csproj
+++ b/src/Common.Logging.DotNetCore/Common.Logging.DotNetCore.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <VersionPrefix>3.4.1.4</VersionPrefix>
-    <AssemblyVersion>3.4.1.4</AssemblyVersion>
-    <FileVersion>3.4.1.4</FileVersion>
+    <VersionPrefix>3.4.1.5</VersionPrefix>
+    <AssemblyVersion>3.4.1.5</AssemblyVersion>
+    <FileVersion>3.4.1.5</FileVersion>
     <Product>Common.Logging (NTERSOL)</Product>
-    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0;netstandard2.0;net472</TargetFrameworks>
     <DebugType>portable</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <AssemblyName>Common.Logging</AssemblyName>
@@ -24,6 +24,10 @@
     <DefineConstants>$(DefineConstants);PORTABLE;NETSTANDARD;NETSTANDARD20</DefineConstants>
   </PropertyGroup>
   
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
+    <DefineConstants>$(DefineConstants);PORTABLE;NETSTANDARD;NETSTANDARD20;NETCORE3</DefineConstants>
+  </PropertyGroup>
+  
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net472' ">
     <DefineConstants>$(DefineConstants);PORTABLE;NETSTANDARD;NETSTANDARD20;NETFULL</DefineConstants>
   </PropertyGroup>
@@ -34,11 +38,18 @@
     <Compile Include="..\Common.Logging\**\*.cs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'net472' ">
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="[2.2.0,3)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="[2.2.0,3)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="[2.2.0,3)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="[2.2.4,3)" />
+  </ItemGroup>
+  
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
